2009-07-22  Cyril Robert <crobert@inverse.ca>

	* UI/Scheduler/UIxCalListingActions.m: Added "editable" field to tasks, so
	that the UI can disable the checkboxes next to them.

2009-07-22  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoUserFolder+Appointments.m
	(-davCalendarScheduleInboxURL, -davCalendarScheduleOutboxURL)
	(-davDropboxHomeURL, -davNotificationsURL): proxied methods to a
	common accessor.

2009-07-21  Cyril Robert <crobert@inverse.ca>

	* UI/Scheduler/UIxCalendarProperties.m: Prevent doing anything when not
	executing @"saveProperties". Added wrapper methods for
	showCalendarTasks/Alarms. Added reloadTasks var.
	* SoObjects/Appointments/SOGoAppointmentFolder.m: Added
	(set/showCalendarTasks), (set/showCalendarAlarms)
	* SoObjects/SOGo/SOGoGCSFolder.m: Added dicts to cleanup on unsubscribe.
	* UI/Scheduler/UIxCalListingActions.m: Added support for
	showCalendarAlarms/Tasks.

2009-07-21  Francis Lachapelle  <flachapelle@inverse.ca>

	* SoObjects/Mailer/SOGoMailBodyPart.m ([SOGoMailBodyPart
	-stringByEscapingURL]): the UTF-8 encoding is now specified for the
	filename of an attachment.

2009-07-20  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	(-caldavFreeBusyRequest:): the list of recipients is now deduced
	from the list of attendees specified in the VFREEBUSY.

2009-07-20  Cyril Robert <crobert@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentFolder.m (davResourceType): Removed
	a few things for the iPhone calDAV sync (schedule-inbox, schedule-outbox,
	vevent-collection, vtodo-collection).
	* SoObjects/SOGo/WORequest+SOGo.m (isIPhone): Added new method to detect
	iPhone's DAV client.

2009-07-20  Francis Lachapelle  <flachapelle@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder
	-fetchFields:from:to:title:component:additionalFilters:includeProtectedInformation:):
	avoid returning repeating events when no end date is