@@ -1,3 +1,9 @@
+2009-07-23  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
+
+	* SoObjects/SOGo/NSArray+Utilities.m (-trimmedComponents): new
+	method that returns a trimmed/stripped version of the strings
+	contained in the array.
+
 2009-07-22  Cyril Robert <crobert@inverse.ca>
 
 	* UI/Scheduler/UIxCalListingActions.m: Added "editable" field to tasks, so
